@@ -1,8 +1,0 @@
-package net.ttddyy.dsproxy.proxy;
-
-/**
- * @author Tadaya Tsuyukubo
- */
-public interface DataSourceNameAware {
-    String getDataSourceName();
-}
